--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,10 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
+        "csfix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src",
+        "csfix:dry": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src --dry-run -v",
+        "csfix:tests": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --config=tools/php-cs-fixer/.php-cs-fixer.dist.php fix src tests",
+        "csfix:tests:dry": "tools/php-cs-fixer/vendor/bin/php-cs-fixer --dry-run -v --config=tools/php-cs-fixer/.php-cs-fixer.dist.php fix src tests",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
