--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
         "phpmd": "tools/phpmd/vendor/bin/phpmd . text tools/phpmd/phpmd.xml || true",
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -c tools/phpstan/phpstan.neon || true",
         "phpdoc": "tools/phpdoc/phpdoc --config=tools/phpdoc/phpdoc.xml",
-        "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit",
+        "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover=docs/coverage.clover",
         "phpmetrics": "tools/phpmetrics/vendor/bin/phpmetrics --config=tools/phpmetrics/phpmetrics.json",
         "lint": [
             "@phpmd",
@@ -95,7 +95,8 @@
             "@csfix:tests",
             "@phpmd",
             "@phpstan",
-            "@phpunit"
+            "@phpunit",
+            "@phpmetrics"
         ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
