Fix scrutinizer covrage unkown by update .scrutinizer.yml

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -20,19 +20,18 @@ build:
                 override:
                     - php-scrutinizer-run
                     #- phpcs-run # Not used, missing config file
-        # coverage:
-        #     tests:
-        #         override:
-        #             - command: ./run-my-tests
-        #               coverage:
-        #                 file: "docs/coverage.clover"   # <- Set this to where we find the coverage data.
-        #                                             #    The path is relative to the current directory.
-        #                 format: "php-clover"
+        coverage:
+            tests:
+                override:
+                      coverage:
+                        file: "docs/coverage.clover"   # <- Set this to where we find the coverage data.
+                                                    #    The path is relative to the current directory.
+                        format: "php-clover"
 
-    tests:
-        override:
-            -   command: ""
-                # composer phpunit command: "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover=docs/coverage.clover",
-                coverage:
-                    file: "docs/coverage.clover"
-                    format: "php-clover"
+    # tests:
+    #     override:
+    #         -   command: "" # no command, just import coverage
+    #             # composer phpunit command: "XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover=docs/coverage.clover",
+    #             coverage:
+    #                 file: "docs/coverage.clover"
+    #                 format: "php-clover"
