--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -23,6 +23,7 @@ build:
         coverage:
             tests:
                 override:
+                    - command: "composer phpunit"
                       coverage:
                         file: "docs/coverage.clover"   # <- Set this to where we find the coverage data.
                                                     #    The path is relative to the current directory.
