--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -22,6 +22,6 @@ build:
                     #- phpcs-run # Not used, missing config file
     tests:
         override:
-            -   # Do not run tests, just load coverage
-                # command: ""
-                load-coverage: "docs/coverage.clover"
+            - coverage:
+                file: "docs/coverage.clover"
+                format: "php-clover"
